rollout-service-mesh/istio/virtual-service-only/progressing/1.rollout-change-image.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-rollout
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: istio-rollout
  template:
    metadata:
      labels:
        app: istio-rollout
    spec:
      containers:
      - name: istio-rollout
        image: argoproj/rollouts-demo:yellow
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: canary-svc
      stableService: stable-svc
      steps:
      - setWeight: 1
      networking:
        istio:
          virtualService:
            name: istio-rollout-vsvc
            routes:
            - primary
