rollout-service-mesh/istio/virtual-service-only/progressing/0.stable-svc-set.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: istio-rollout
    rollouts-pod-template-hash: 797445fbb7
