rollout-service-mesh/istio/virtual-service-only/progressing/2.change-canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    rollouts-pod-template-hash: 797445fbb7
    app: istio-rollout
