rollout-service-mesh/istio/virtual-service-only/progressing/3.istio-vsvc-progressing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-rollout-vsvc
spec:
  gateways:
    - istio-rollout-gateway
  hosts:
    - istio-rollout.dev.argoproj.io
  http:
    - route:
        - destination:
            host: stable-svc
          weight: 99
        - destination:
            host: canary-svc
          weight: 1
